Add deployed frontend URL to CORS allowed origins